# py-clash-configer

./: .gitignore  README.rst  pyproject.toml
py_clash_configer/: update-clash-config.py
tests/: test_py_clash_configer.py
